@@ -1,69 +1,57 @@
 package net.blockomorph.screens;
 
-import net.blockomorph.utils.*;
-import net.blockomorph.utils.config.*;
-import net.blockomorph.network.*;
-
-import net.minecraft.client.gui.screens.Screen;
-import net.minecraft.world.level.Level;
-import net.minecraft.world.entity.player.Player;
-import net.minecraft.client.Minecraft;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.client.gui.GuiGraphics;
-import net.minecraft.nbt.TagParser;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.world.level.block.Blocks;
-import net.minecraft.world.level.block.state.properties.Property;
-import net.minecraft.world.level.block.state.properties.BooleanProperty;
-import net.minecraft.world.level.block.state.properties.IntegerProperty;
-import net.minecraft.world.level.block.state.properties.EnumProperty;
-import net.minecraft.client.sounds.SoundManager;
-import net.minecraft.client.resources.sounds.SimpleSoundInstance;
-import net.minecraft.sounds.SoundEvents;
-import net.minecraft.network.chat.Component;
-import net.minecraft.client.renderer.MultiBufferSource;
-import net.minecraft.core.BlockPos;
-import net.minecraft.util.RandomSource;
-import net.minecraft.world.level.block.state.BlockState;
-import net.minecraft.client.renderer.blockentity.BlockEntityRenderDispatcher;
-import net.minecraft.client.renderer.block.BlockRenderDispatcher;
-import net.minecraft.client.renderer.texture.OverlayTexture;
-import net.minecraft.world.level.block.entity.BlockEntity;
-import net.minecraft.world.level.block.EntityBlock;
-import net.minecraft.client.renderer.LightTexture;
-import net.minecraft.client.renderer.blockentity.BlockEntityRenderer;
-import net.minecraft.client.gui.components.EditBox;
-
+import com.mojang.blaze3d.systems.RenderSystem;
+import com.mojang.blaze3d.vertex.PoseStack;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.math.Axis;
-import com.mojang.blaze3d.vertex.PoseStack;
-import com.mojang.blaze3d.systems.RenderSystem;
-
-import net.neoforged.neoforge.client.model.data.ModelData;
-import net.neoforged.neoforge.network.PacketDistributor;
-
+import net.blockomorph.core.MainBus;
+import net.blockomorph.network.ServerBoundBlockMorphPacket;
+import net.blockomorph.utils.MorphUtils;
+import net.blockomorph.utils.PlayerAccessor;
+import net.blockomorph.utils.SavedBlock;
+import net.blockomorph.utils.config.Config;
+import net.fabricmc.fabric.api.client.networking.v1.ClientPlayNetworking;
+import net.minecraft.client.Minecraft;
+import net.minecraft.client.gui.GuiGraphics;
+import net.minecraft.client.gui.components.EditBox;
+import net.minecraft.client.gui.components.ImageButton;
+import net.minecraft.client.gui.screens.Screen;
+import net.minecraft.client.renderer.ItemBlockRenderTypes;
+import net.minecraft.client.renderer.LightTexture;
+import net.minecraft.client.renderer.MultiBufferSource;
+import net.minecraft.client.renderer.block.BlockRenderDispatcher;
+import net.minecraft.client.renderer.blockentity.BlockEntityRenderDispatcher;
+import net.minecraft.client.renderer.blockentity.BlockEntityRenderer;
+import net.minecraft.client.renderer.texture.OverlayTexture;
+import net.minecraft.client.resources.sounds.SimpleSoundInstance;
+import net.minecraft.client.sounds.SoundManager;
+import net.minecraft.core.BlockPos;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.TagParser;
+import net.minecraft.network.chat.Component;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.sounds.SoundEvents;
+import net.minecraft.util.RandomSource;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.level.block.Blocks;
+import net.minecraft.world.level.block.EntityBlock;
+import net.minecraft.world.level.block.entity.BlockEntity;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.block.state.properties.BooleanProperty;
+import net.minecraft.world.level.block.state.properties.EnumProperty;
+import net.minecraft.world.level.block.state.properties.IntegerProperty;
+import net.minecraft.world.level.block.state.properties.Property;
 import org.joml.Matrix4f;
 
-import java.util.Optional;
-import java.util.Collection;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
-
-import net.minecraft.client.gui.components.WidgetSprites;
-import net.minecraft.client.gui.components.ImageButton;
+import java.util.Optional;
 
 public class BlockMorphConfigScreen extends Screen {
-   private static final ResourceLocation texture = ResourceLocation.fromNamespaceAndPath("blockomorph", "textures/screens/morph_config_gui.png");
-   private static final ResourceLocation PROP = ResourceLocation.fromNamespaceAndPath("blockomorph", "textures/screens/properties.png");
-   private static final WidgetSprites SAVE_BUT = new WidgetSprites(
-   	ResourceLocation.fromNamespaceAndPath("blockomorph", "textures/screens/save_but_def.png"),
-   	ResourceLocation.fromNamespaceAndPath("blockomorph", "textures/screens/save_but_dis.png"),
-   	ResourceLocation.fromNamespaceAndPath("blockomorph", "textures/screens/save_but_hov.png")
-   );
-   private static final WidgetSprites BUCKET = new WidgetSprites(
-   	ResourceLocation.fromNamespaceAndPath("blockomorph", "textures/screens/edit_buk_def.png"),
-   	ResourceLocation.fromNamespaceAndPath("blockomorph", "textures/screens/edit_buk_hov.png")
-   );
+   private static final ResourceLocation texture = new ResourceLocation("blockomorph:textures/screens/morph_config_gui.png");
+   private static final ResourceLocation PROP = new ResourceLocation("blockomorph:textures/screens/properties.png");
    private final BlockRenderDispatcher dispatcher = Minecraft.getInstance().getBlockRenderer();
    private final BlockEntityRenderDispatcher blockEntityRenderDispatcher = Minecraft.getInstance().getBlockEntityRenderDispatcher();
    private final SoundManager sound = Minecraft.getInstance().getSoundManager();
@@ -93,15 +81,15 @@ public class BlockMorphConfigScreen extends Screen {
    	   this.init = init;
    	   this.world = Minecraft.getInstance().level;
 	   this.entity = Minecraft.getInstance().player;
-	   MorphUtils.bmanager.load();
+       MorphUtils.bmanager.load();
    }
 
    @Override
    public void render(GuiGraphics guiGraphics, int mouseX, int mouseY, float partialTicks) {
-		super.render(guiGraphics, mouseX, mouseY, partialTicks);
+		this.renderBackground(guiGraphics);
 		this.renderBg(guiGraphics, partialTicks, mouseX, mouseY);
+		super.render(guiGraphics, mouseX, mouseY, partialTicks);
 		this.renderLb(guiGraphics);
-		tagsBox.render(guiGraphics, mouseX, mouseY, partialTicks);
 		this.renderBlockAsIcon(guiGraphics, partialTicks);
 	    String name = playerState.getBlock().getName().getString();
 		if (name.length() > 13 && mouseX > this.leftPos + 15 && mouseX < this.leftPos + 75 && mouseY > this.topPos + 18 && mouseY < this.topPos + 78) guiGraphics.renderTooltip(this.font, Component.literal(name), mouseX, mouseY);
@@ -152,8 +140,8 @@ public class BlockMorphConfigScreen extends Screen {
 		RenderSystem.defaultBlendFunc();
 		guiGraphics.blit(texture, this.leftPos, this.topPos, 0, 0, this.imageWidth, this.imageHeight, this.imageWidth, this.imageHeight);
 		if (!tagsBox.canConsumeInput()) 
-		    guiGraphics.blit(ResourceLocation.fromNamespaceAndPath("blockomorph", "textures/screens/morph_gui_icons.png"), this.leftPos + 7, this.topPos + 139, 0, 0, 162, 19, 162, 19);
-		guiGraphics.blit(ResourceLocation.fromNamespaceAndPath("blockomorph", "textures/screens/exit_tabs.png"), this.leftPos + 4, this.topPos - 19, 0, 23, 80, 22, 80, 46);
+		    guiGraphics.blit(new ResourceLocation("blockomorph:textures/screens/morph_gui_icons.png"), this.leftPos + 7, this.topPos + 139, 0, 0, 162, 19, 162, 19);
+		guiGraphics.blit(new ResourceLocation("blockomorph:textures/screens/exit_tabs.png"), this.leftPos + 4, this.topPos - 19, 0, 23, 80, 22, 80, 46);
 		this.renderMbButton(guiGraphics, partialTicks, gx, gy);
 		this.renderProp(guiGraphics, gx, gy);
 		RenderSystem.disableBlend();
@@ -161,7 +149,7 @@ public class BlockMorphConfigScreen extends Screen {
 
    private void renderMbButton(GuiGraphics guiGraphics, float partialTicks, int gx, int gy) {
    	    if (Config.getInstance() != null && (boolean)Config.getInstance().getValue("advancedMode")) {
-   	    	guiGraphics.blit(ResourceLocation.fromNamespaceAndPath("blockomorph", "textures/screens/mb_but.png"), this.leftPos + 93, this.topPos + 120, 0, this.mb ? 10:0, 67, 10, 67, 20);
+   	    	guiGraphics.blit(new ResourceLocation("blockomorph:textures/screens/mb_but.png"), this.leftPos + 93, this.topPos + 120, 0, this.mb ? 10:0, 67, 10, 67, 20);
    	    	guiGraphics.drawCenteredString(this.font, Component.translatable("gui.blockomorph.mb"), this.leftPos + 93 + 33, this.topPos + 121, -1);
    	    }
    }
@@ -278,15 +266,12 @@ public class BlockMorphConfigScreen extends Screen {
    	    		}
    	    	} else break;
    	    }
-   	    if (number) {
-   	    	this.listPropNumber = -1;
-   	    }
+   	    if (number) this.listPropNumber = -1;
    	    return null;
    }
 
-   public boolean mouseScrolled(double x, double y, double unkown, double type) { //new
-   	    Collection<Property<?>> properties = this.playerState.getProperties();
-   	    if (this.isListFocused(x, y)) {
+   public boolean mouseScrolled(double x, double y, double type) {
+            if (this.isListFocused(x, y)) {
    	       Collection<Enum<?>> values = listProp.getPossibleValues();
    	       if (values.size() < 7) return true;
    	       if (type < 0 && this.enumListOffset + 7 < values.size()) {
@@ -297,6 +282,7 @@ public class BlockMorphConfigScreen extends Screen {
            return true;
    	    }
    	    if (x < this.leftPos + 93 || x > this.leftPos + 159 || y < this.topPos + 24 || y > this.topPos + 118) return false;
+   	    Collection<Property<?>> properties = this.playerState.getProperties();
    	    if (!(this.getProp(x, y, false) instanceof IntegerProperty prop)) {
    	       if (type < 0 && this.propOff + 5 < properties.size()) {
               this.propOff++;
@@ -313,11 +299,11 @@ public class BlockMorphConfigScreen extends Screen {
    	       if (type > 0 && value < intes.get(ints.size() - 1)) {
    	    	  state = state.setValue(prop, value + 1);
    	    	  sound.play(SimpleSoundInstance.forUI(SoundEvents.UI_BUTTON_CLICK, 1.0F));
-           } else if (type < 0 && value > intes.get(0)) {
+           } else if (type < 0 && value > intes.getFirst()) {
               state = state.setValue(prop, value - 1);
               sound.play(SimpleSoundInstance.forUI(SoundEvents.UI_BUTTON_CLICK, 1.0F));
            }
-           MorphUtils.sendServer(ServerBoundBlockMorphPacket.create(state, this.playerTag));
+           this.send(state, this.playerTag);
    	    }
    	    return true;
    }
@@ -330,7 +316,7 @@ public class BlockMorphConfigScreen extends Screen {
         return super.charTyped(c, t);
    }
 
-   public boolean mouseClicked(double x, double y, int type) { //new
+   public boolean mouseClicked(double x, double y, int type) {
    	    if (type == 0) {
    	    	if (x > this.leftPos + 41 && x < this.leftPos + 4 + 80 && y > this.topPos - 19 && y < this.topPos - 19 + 22) {
    	    		this.minecraft.setScreen(new MorphScreen(Config.Mode.NONE, true));
@@ -357,14 +343,10 @@ public class BlockMorphConfigScreen extends Screen {
                     this.listProp = enumprop;
                     sound.play(SimpleSoundInstance.forUI(SoundEvents.UI_BUTTON_CLICK, 1.0F));
    	    	    }
-   	    	} 
-   	    	this.enumListOffset = 0; //new
+   	    	}
+                this.enumListOffset = 0; //new
    	    }
    	    return super.mouseClicked(x, y, type);
-   }
-
-   private void send(BlockState blockState, CompoundTag tag) {
-   	    MorphUtils.sendServer(ServerBoundBlockMorphPacket.create(blockState, tag));
    }
 
    private int getLongWord(Collection<Enum<?>> values) {
@@ -391,7 +373,7 @@ public class BlockMorphConfigScreen extends Screen {
    	    return false;
    }
 
-   private boolean enumClick(double mouseX, double mouseY) { //new
+   private boolean enumClick(double mouseX, double mouseY) {
    	    if (this.listProp != null && this.listPropNumber > -1 && this.listPropNumber < 5) {
    	        Collection<Enum<?>> values = listProp.getPossibleValues();
    	        List<Enum<?>> vals = new ArrayList<>(values);
@@ -407,7 +389,7 @@ public class BlockMorphConfigScreen extends Screen {
 
                 if (isMouseOver(mouseX, mouseY, textX, textY - 2, maxWidth, 12)) {
                 	BlockState state = this.setEnum(this.listProp, string);
-                    MorphUtils.sendServer(ServerBoundBlockMorphPacket.create(state, this.playerTag));
+                    this.send(state, this.playerTag);
                     sound.play(SimpleSoundInstance.forUI(SoundEvents.UI_BUTTON_CLICK, 1.0F));
                     return true;
                 }
@@ -425,6 +407,10 @@ public class BlockMorphConfigScreen extends Screen {
       } else {
          throw new IllegalArgumentException("Irregular value " + s + " for argument " + prop.getName());
       }
+   }
+
+   private void send(BlockState blockState, CompoundTag tag) {
+   	    MorphUtils.sendServer(ServerBoundBlockMorphPacket.create(blockState, tag));
    }
 
    private void validSave(String s) {
@@ -464,8 +450,8 @@ public class BlockMorphConfigScreen extends Screen {
 		super.init();
         this.leftPos = (this.width - this.imageWidth) / 2;
         this.topPos = (this.height - this.imageHeight) / 2;
-        tagsBox = new ListenerEditBox(this.font, this.leftPos + 10, this.topPos + 145, 158, 17, Component.literal("tagbox"), this::updateNbt);
-        savebox = new ListenerEditBox(this.font, this.leftPos + 15, this.topPos + 102, 31, 17, Component.literal("savebox"), this::validSave);
+        tagsBox = new ListenerEditBox(this.font, this.leftPos + 10, this.topPos + 145, 158, 17, null, this::updateNbt);
+        savebox = new ListenerEditBox(this.font, this.leftPos + 15, this.topPos + 102, 31, 17, null, this::validSave);
         savebox.setBordered(false);
         savebox.setTextColor(-1);
         savebox.setTextColorUneditable(-1);
@@ -488,7 +474,7 @@ public class BlockMorphConfigScreen extends Screen {
 			tagsBox.setFocused(false);
 			tagsBox.setEditable(false);
 		}
-		this.edit = new ImageButton(this.leftPos + 52, this.topPos + 90, 26, 26, SAVE_BUT, e -> {
+		this.edit = new ImageButton(this.leftPos + 52, this.topPos + 90, 26, 26, 0, 0, 26, new ResourceLocation("blockomorph:textures/screens/save_but.png"), 26, 78, e -> {
 			 if (this.editButBucket) {
 			 	MorphUtils.bmanager.delete(savebox.getValue());
 			 } else {
@@ -497,14 +483,19 @@ public class BlockMorphConfigScreen extends Screen {
 			 this.validSave(this.savebox.getValue());
 		}) {
 			public void renderWidget(GuiGraphics g, int gx, int gy, float ticks) {
-				WidgetSprites sp = this.sprites;
-				if (BlockMorphConfigScreen.this.editButBucket) sp = BUCKET;
-				ResourceLocation loc = sp.get(this.isActive(), this.isHoveredOrFocused());
-                g.blit(loc, this.getX(), this.getY(), 0, 0, this.width, this.height, this.width, this.height);
+				ResourceLocation loc = this.resourceLocation;
+				if (BlockMorphConfigScreen.this.editButBucket) loc = new ResourceLocation("blockomorph:textures/screens/edit_bucket.png");
+                this.renderTexture(g, loc, this.getX(), this.getY(), this.xTexStart, this.yTexStart, this.yDiffTex, this.width, this.height, this.textureWidth, this.textureHeight);
             }
 		};
 		this.addRenderableWidget(this.edit);
 		this.validSave(savebox.getValue());
+   }
+
+   public void tick() {
+   	    super.tick();
+   	    tagsBox.tick();
+   	    savebox.tick();
    }
 
    @Override
@@ -522,17 +513,17 @@ public class BlockMorphConfigScreen extends Screen {
         MultiBufferSource.BufferSource bufferSource = guiGraphics.bufferSource();
         poseStack.pushPose();
         poseStack.translate(this.leftPos + 71, this.topPos + 63.8, 20); 
-        poseStack.mulPose((new Matrix4f()).scaling(1.0F, -1.0F, 1.0F));
+        poseStack.mulPoseMatrix((new Matrix4f()).scaling(1.0F, -1.0F, 1.0F));
         poseStack.scale(36.0F, 36.0F, 36.0F); 
         poseStack.mulPose(Axis.XP.rotationDegrees(30.0F));
         poseStack.mulPose(Axis.YP.rotationDegrees(225.0F)); 
         BlockPos pos = AIR;
-        BlockState blockState = this.playerState;
-        RandomSource random = RandomSource.create(blockState.getSeed(pos));
-        var model = this.dispatcher.getBlockModel(blockState);
-        for (var renderType : model.getRenderTypes(blockState, random, ModelData.EMPTY))
-            this.dispatcher.getModelRenderer().tesselateBlock(world, model, blockState, pos, poseStack, bufferSource.getBuffer(renderType), false, RandomSource.create(), blockState.getSeed(pos), OverlayTexture.NO_OVERLAY, ModelData.EMPTY, renderType);
-        this.renderBlockEntity(blockState, ticks, poseStack, bufferSource);
+        BlockState blockstate = this.playerState;
+        RandomSource random = RandomSource.create(blockstate.getSeed(pos));
+        var model = this.dispatcher.getBlockModel(blockstate);
+        var renderType = ItemBlockRenderTypes.getMovingBlockRenderType(blockstate);
+        this.dispatcher.getModelRenderer().tesselateBlock(world, model, blockstate, pos, poseStack, bufferSource.getBuffer(renderType), false, RandomSource.create(), blockstate.getSeed(pos), OverlayTexture.NO_OVERLAY);
+        this.renderBlockEntity(blockstate, ticks, poseStack, bufferSource);
         poseStack.popPose();
    }
 
@@ -542,7 +533,7 @@ public class BlockMorphConfigScreen extends Screen {
             if (blockEntity != null) {
               try {
       	        blockEntity.setLevel(world);
-      	        blockEntity.loadWithComponents(playerTag, world.registryAccess());
+      	        blockEntity.load(playerTag);
                 BlockEntityRenderer renderer = blockEntityRenderDispatcher.getRenderer(blockEntity);
                 if (renderer != null) {
            	        posestack.pushPose();
